@@ -1,5 +1,6 @@
 0.0.2-alpha (2013-??-??)
 	* Added: Request::getHttpVersion and Request::setHttpVersion.
+	* Added: Request::setRawServerArray, getRawServerValue.
 
 0.0.1-alpha (2012-10-07)
 	* First version.
